--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.11.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
+crispy-bootstrap5==2025.6
 dj-database-url==3.1.0
 Django==5.2.9
+django-crispy-forms==2.5
 django-tenants==3.9.0
 idna==3.11
 psycopg2-binary==2.9.11
