--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==5.2.9
 django-crispy-forms==2.5
 django-tenants==3.9.0
 idna==3.11
+pillow==12.1.0
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
 requests==2.32.5
