--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.11.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
+cloudinary==1.44.1
 crispy-bootstrap5==2025.6
 dj-database-url==3.1.0
 Django==5.2.9
+django-cloudinary-storage==0.3.0
 django-crispy-forms==2.5
 django-tenants==3.9.0
 idna==3.11
@@ -11,6 +13,7 @@ pillow==12.1.0
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
 requests==2.32.5
+six==1.17.0
 sqlparse==0.5.5
 stripe==14.1.0
 typing_extensions==4.15.0
