--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ Django==5.2.9
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.5
 django-tenants==3.9.0
+gunicorn==25.0.3
 idna==3.11
+packaging==26.0
 pillow==12.1.0
 psycopg2-binary==2.9.11
 python-dotenv==1.2.1
@@ -18,3 +20,4 @@ sqlparse==0.5.5
 stripe==14.1.0
 typing_extensions==4.15.0
 urllib3==2.6.2
+whitenoise==6.11.0
